Fix crashing when upgrading skill to max level